# hackUPC

./: .env.sim.example  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TRACK-CONTEXT.md  docker-compose.yml
.github/workflows/: ci.yml
assets/hp-brand/: README.md
docs/: build-plan.md
docs/briefing/: hackathon.md  stage-1.md  stage-2.md  stage-3.md
docs/research/: 01-recoater-blade-archard.md  02-nozzle-plate-coffin-manson.md  03-heating-elements-arrhenius.md  04-aging-baselines-and-normalization.md  05-cascading-and-ai-degradation.md  06-driver-profiles-and-time.md  07-weather-api.md  08-historian-schema.md  09-maintenance-agent.md  11-vercel-ai-sdk.md  (+46 more)
sim/: .dockerignore  Dockerfile  pyproject.toml
sim/scenarios/: barcelona-18mo.yaml  barcelona-baseline.yaml  barcelona-collapse-18mo.yaml  barcelona-collapse.yaml  barcelona-human-disruption-no-maintenance.yaml  barcelona-powder-bug-with-maintenance.yaml  barcelona-with-chaos.yaml  barcelona-with-events.yaml  chaos-stress-test.yaml  phoenix-18mo.yaml  phoenix-aggressive.yaml
sim/src/copilot_sim/: __init__.py  cli.py
sim/src/copilot_sim/api/: __init__.py  auth.py  ingest.py  main.py  runner.py  schemas.py
sim/src/copilot_sim/components/: blade.py  cleaning.py  heater.py  nozzle.py  rail.py  registry.py  sensor.py
sim/src/copilot_sim/dashboard/: README.md  __init__.py  streamlit_app.py
sim/src/copilot_sim/domain/: coupling.py  drivers.py  enums.py  events.py  state.py
sim/src/copilot_sim/drivers_src/: assembly.py  chaos.py  environment.py  events.py  generators.py
sim/src/copilot_sim/engine/: aging.py  assembly.py  coupling.py  engine.py
sim/src/copilot_sim/historian/: connection.py  reader.py  run_id.py  schema.sql  writer.py
sim/src/copilot_sim/policy/: heuristic.py
sim/src/copilot_sim/sensors/: factories.py  model.py
sim/src/copilot_sim/simulation/: bootstrap.py  loop.py  scenarios.py
sim/tests/: test_smoke.py
sim/tests/components/: _helpers.py  test_blade_smoke.py  test_cleaning_smoke.py  test_heater_smoke.py  test_nozzle_smoke.py  test_rail_smoke.py  test_sensor_smoke.py
sim/tests/engine/: test_apply_maintenance.py  test_driver_coverage.py  test_drivers.py  test_engine_step.py  test_events.py  test_historian.py  test_policy.py  test_rng_determinism.py  test_sensor_pass.py
sim/tests/simulation/: test_cli.py  test_full_run.py  test_loop.py
web/: .env-convex.schema  .env.convex.example  .env.schema  .gitignore  README.md  _headers  components.json  package.json  wrangler.toml
(+164 files in other folders)
