[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-sim"
version = "0.1.0"
description = "HackUPC HP Digital Co-Pilot — coupled discrete-time simulator for the Metal Jet S100"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "Daniel Sticker" },
    { name = "Jana Rawe" },
    { name = "Leonie" },
    { name = "Cristina Huanca" },
]
license = "MIT"
keywords = ["digital-twin", "simulation", "hp-metal-jet", "hackupc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Simulation",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "streamlit>=1.39",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]

[project.scripts]
copilot-sim = "copilot_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.9",
    "ty>=0.0.1a12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ty.src]
include = ["src", "tests"]
